--- a/src/index.html
+++ b/src/index.html
@@ -9,27 +9,29 @@
 </head>
 <body>
     <section class="banner">
+        <div class="banner__background0"></div>
+        <div class="banner__background"></div>
         <div class="banner-black">
-            <div class="banner-black__text">
-                Швейцарские часы и<br>
-                ювелирные изделия
-            </div>
             <ul class="banner-black__list">
                 <li class="li">продажа</li>
                 <li class="li">выкуп</li>
                 <li class="li">трейд-ин</li>
             </ul>
+            <div class="banner-black__text">
+                Швейцарские часы и<br>
+                ювелирные изделия
+            </div>
             <div class="banner-black__logo">
-
+                <img src="img/Logo_1.svg" alt="logo1">
             </div>
         </div>
         <div class="banner-green">
             <div class="banner-green__logo">
-                
+                <img src="img/Logo_2.svg" alt="logo2">
             </div>
             <div class="banner-green__text">
                 часовая мастерская<br>
-                Швеёцарских часов
+                Швейцарских часов
             </div>
             <ul class="banner-green__list">
                 <li class="li">ремонт</li>
